--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,13 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@popperjs/core": "^2.9.3",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
