--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
+    "sweetalert": "^2.1.2",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -34,7 +35,7 @@
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.21",
     "jasmine-core": "^3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
