--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -3,13 +3,14 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "moduleResolution": "node",
+    "types": ["node"]
   },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts", "tests/**/*.ts"
   ]
 }
