--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,6 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
+    "noImplicitAny": false,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
@@ -19,6 +20,11 @@
     "lib": [
       "es2018",
       "dom"
+    ],
+    "types": ["node"],
+    "typeRoots": [
+      "./typings",
+      "./node_modules/@types/"
     ]
   },
   "angularCompilerOptions": {
