--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.6.3",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
