--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,9 @@
     "@angular-devkit/build-angular": "~12.1.1",
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
+    "@types/bootstrap": "^5.1.2",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.11.1",
     "jasmine-core": "^3.7.0",
     "karma": "~6.3.0",
